--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
