--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0",
+    "react-router": "^7.5.2",
+    "react-router-dom": "^7.5.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
